fixed scrollbar on tables

--- a/Source/src/app/shared/components/table-card/table-card.component.scss
+++ b/Source/src/app/shared/components/table-card/table-card.component.scss
@@ -75,7 +75,6 @@
 
         .datatable-body {
           font-size: 11px;
-          padding-bottom: 70px;
           overflow-x: hidden;
 
           .datatable-row-wrapper {
